--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 			<link rel="stylesheet" href="css/style-wide.css" />
 			<link rel="stylesheet" href="css/style-noscript.css" />
 		</noscript>
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
 	<body class="index">
 
 		<!-- Header -->
-			<header id="header" class="skel-layers-fixed">
+			<header id="header" class="skel-layers-fixed alt">
 				<h1 id="logo"><a href="index.html">may 13, 2015 San Francisco, CA</a></h1>
 				<nav id="nav">
 					<ul>
