Some more changes in examples section

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 						<div class="row">
 
 							<div class="6u 12u(narrower)">
-								<section>
-									<iframe width="350" height="215" src="https://www.youtube.com/embed/ReH7zzj5GPc" frameborder="0" allowfullscreen></iframe>
+								<section class="examples">
+									<iframe width="350" height="215" class="thumb" src="https://www.youtube.com/embed/ReH7zzj5GPc" frameborder="0" allowfullscreen></iframe>
 									<header>
 										<h3>3 Dreams of Black</h3>
 									</header>
@@ -91,8 +91,8 @@
 							</div>
 
 							<div class="6u 12u(narrower)">
-								<section>
-									<img width="348" height="213" src="./img/vlcsnap-2014-07-10-13h22m26s182.png" alt="" />
+								<section class="examples">
+									<img width="348" height="213" class="thumb" src="./img/vlcsnap-2014-07-10-13h22m26s182.png" alt="" />
 									<header>
 										<h3>City of Drones</h3>
 									</header>
@@ -104,8 +104,8 @@
 						<div class="row">
 
 							<div class="6u 12u(narrower)">
-								<section>
-									<iframe width="350" height="215" src="https://www.youtube.com/embed/iI00HcxDn4k" frameborder="0" allowfullscreen></iframe>
+								<section class="examples">
+									<iframe width="350" height="215" class="thumb" src="https://www.youtube.com/embed/iI00HcxDn4k" frameborder="0" allowfullscreen></iframe>
 									<header>
 										<h3>APEXvj</h3>
 									</header>
@@ -114,8 +114,8 @@
 							</div>
 							
 							<div class="6u 12u(narrower)">
-								<section>
-									<img width="348" height="213" src="img/lights.jpg" alt="" />
+								<section class="examples">
+									<img width="348" height="213" class="thumb" src="img/lights.jpg" alt="" />
 									<header>
 										<h3>Lights</h3>
 									</header>
